cluster-config/01-private-registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-repository-k8s
  labels:
    app: private-repository-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: private-repository-k8s
  template:
    metadata:
      labels:
        app: private-repository-k8s
    spec:
      containers:
        - name: private-repository-k8s
          image: registry:2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "100m"
              memory: "512Mi"
          ports:
            - containerPort: 5000
          volumeMounts:
          - name: repo-vol
            mountPath: /var/lib/registry
      volumes:
        - name: repo-vol
          persistentVolumeClaim:
            claimName: docker-repo-pvc
