cluster-config/02-private-registry-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: private-repository-k8s
  name: private-repository-k8s
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: private-repository-k8s
